--- a/implementation/bArnoldi.ipynb
+++ b/implementation/bArnoldi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,14 +83,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.068229 seconds (56.07 k allocations: 9.147 MiB, 93.02% compilation time)\n"
+      "  0.049560 seconds (56.07 k allocations: 9.147 MiB, 94.22% compilation time)\n"
      ]
     }
    ],
@@ -117,49 +117,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "norm(A * W[:, 1:M * L] - W * H) = 1.5636623172858418e-13\n"
+      "  0.056011 seconds (99.53 k allocations: 17.816 MiB, 91.07% compilation time)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1.5636623172858418e-13"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
     "# Block Arnoldi\n",
     "X_σ = zeros(n, L) \n",
     "Res = zeros(n, L)\n",
-    "W, H = bArnoldi(A, B, M);\n",
-    "@show norm(A*W[:,1:M*L] - W*H)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  0.002228 seconds (803 allocations: 5.972 MiB)\n"
-     ]
-    }
-   ],
-   "source": [
     "@time begin\n",
+    "    W, H = bArnoldi(A, B, M)\n",
     "    f = qr(B)\n",
     "    for m in 1:M\n",
     "        #print(\"m$m\\t\")\n",
@@ -174,13 +148,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1.4644780241082843e-9, 3.085512983724735e-13, 1.4644803410641835e-9)"
+       "(1.8582760814184719e-9, 3.5752763904468557e-13, 1.8583020538270672e-9)"
       ]
      },
      "metadata": {},
@@ -193,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": []
