--- a/warmup/sparse.ipynb
+++ b/warmup/sparse.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -68,20 +68,21 @@
        " ⋅   ⋅  ⋅  3"
       ]
      },
-     "execution_count": 190,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
     "# Create a better sparse matrix manually\n",
-    "I = [1, 4, 3, 5]; J = [4, 1, 2, 4]; V = [1, 2, -5, 3];\n",
+    "I = [1, 4,  3, 5];  # the indices of the rows\n",
+    "J = [4, 1,  2, 4];  # the indices of the columns\n",
+    "V = [1, 2, -5, 3];  # the values\n",
     "S = sparse(I, J, V)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,14 +94,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.111960 seconds (46.27 k allocations: 3.110 MiB, 98.76% compilation time)\n"
+      "  0.040395 seconds (46.19 k allocations: 2.776 MiB, 97.59% compilation time)\n"
      ]
     }
    ],
@@ -110,14 +111,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.142748 seconds (46.27 k allocations: 3.110 MiB, 24.59% gc time, 99.20% compilation time)\n"
+      "  0.048678 seconds (46.19 k allocations: 2.779 MiB, 97.95% compilation time)\n"
      ]
     }
    ],
@@ -127,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,16 +165,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.138758 seconds (55.43 k allocations: 3.769 MiB, 79.55% compilation time)\n",
-      "  0.074039 seconds (66.29 k allocations: 4.616 MiB, 98.74% compilation time)\n",
-      "  0.000544 seconds (412 allocations: 364.688 KiB)\n"
+      "  0.064588 seconds (56.56 k allocations: 9.430 MiB, 77.06% compilation time)\n",
+      "  0.046275 seconds (67.81 k allocations: 4.331 MiB, 98.40% compilation time)\n",
+      "  0.000498 seconds (415 allocations: 364.828 KiB)\n"
      ]
     }
    ],
@@ -185,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +201,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.241015 seconds (2.37 k allocations: 5.277 MiB)\n"
+      "  1.949781 seconds (3.38 M allocations: 190.101 MiB, 5.52% gc time, 96.24% compilation time)\n"
      ]
     },
     {
@@ -215,7 +216,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  0.156083 seconds (2.31 k allocations: 4.816 MiB)\n"
+      "  0.123608 seconds (3.00 k allocations: 4.846 MiB, 17.63% compilation time)\n",
+      "  0.042807 seconds (1.29 k allocations: 1.009 MiB)\n"
      ]
     },
     {
@@ -224,13 +226,6 @@
      "text": [
       "┌ Warning: Adjusting nev from 200 to 199\n",
       "└ @ Arpack /home/leila/.julia/packages/Arpack/pLziT/src/Arpack.jl:92\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  0.099771 seconds (1.29 k allocations: 1.010 MiB)\n"
      ]
     }
    ],
@@ -243,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -251,15 +246,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.6.2",
+   "display_name": "Julia 1.8.0",
    "language": "julia",
-   "name": "julia-1.6"
+   "name": "julia-1.8"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.6.2"
+   "version": "1.8.0"
   },
   "orig_nbformat": 4,
   "vscode": {
