a comment for Krylov

--- a/warmup/krylov.ipynb
+++ b/warmup/krylov.ipynb
@@ -49,7 +49,7 @@
     "res = zeros(M+1, 1)\n",
     "for m in 1:M+1\n",
     "    km_ = Km[:, 1:m]\n",
-    "    z = (A * km_) \\ b\n",
+    "    z = (A * km_) \\ b # This is the minimization problem described in equation 8.4.2\n",
     "    x = km_ * z # Lemma 8.4.1, p.332 (A Km z = b, Km z = x)\n",
     "    res[m] = norm(b - A * x)\n",
     "end"
