--- a/implementation/bArnoldi-naive.ipynb
+++ b/implementation/bArnoldi-naive.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -11,27 +11,45 @@
        "arnoldi (generic function with 1 method)"
       ]
      },
-     "execution_count": 44,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
     "using LinearAlgebra\n",
     "using SparseArrays\n",
-    "using Plots\n",
     "include(\"arnoldi.jl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "n = 100\n",
+    "M = 40\n",
+    "L = 2\n",
+    "# We need this condition for now\n",
+    "M * L <= n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "n = 100\n",
-    "M = 30\n",
-    "L = 4\n",
     "#^^^^^^^^^^^^^^^^^^^^^^^#\n",
     "#  A*X_σ - X_σ * D = B  #\n",
     "#_______________________#\n",
@@ -43,77 +61,75 @@
     "#   Shift\n",
     "σ = rand(1:9, L)\n",
     "D = diagm(σ) \n",
+    "Γ = .7\n",
     "# RHS\n",
     "B = randn(n, L);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Initialize\n",
-    "X_σ     = zeros(n, L) \n",
-    "X_exact = zeros(n, L)\n",
-    "Res     = zeros(M, L);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "norm(lhs * Q[:, 1:M] - Q * H) = 1.024259293270996e-13\n",
-      "norm(lhs * Q[:, 1:M] - Q * H) = 1.0939229429435777e-13\n",
-      "norm(lhs * Q[:, 1:M] - Q * H) = 1.1153827680532373e-13\n",
-      "norm(lhs * Q[:, 1:M] - Q * H) = 1.0963209394621552e-13\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "5.557158435166617e-6"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# [A](nxn) x = b\n",
-    "# [Q](n x m+1) = [q1 q2 ... q(m+1)], q1 = normalized b\n",
-    "# [H](m+1 x m): upper Hessenberg\n",
-    "# A Q_m = Q H , [Q_m](nxm) = [q1 q2 ... qm]\n",
-    "# x = Q_m z\n",
-    "# A Q_m z = b = Q H z\n",
-    "# Q' b = Q' Q H z => H z = Q' b = s => z = H \\ s => x = Q_m z\n",
+    "x_exact = zeros(n, L)\n",
     "for l=1:L\n",
     "    lhs = A - D[l, l]*I\n",
     "    b = B[:, l]\n",
-    "    X_exact[:, l] = lhs \\ b\n",
-    "    Q, H = arnoldi(lhs, b, M)\n",
-    "    @show norm(lhs*Q[:, 1:M] - Q*H)\n",
-    "    for m in 1:M\n",
-    "        s = vcat(norm(b), zeros(m, 1)) # s = Q' b\n",
-    "        z = H[1:m+1, 1:m] \\ s          # z = H \\ s\n",
-    "        x = Q[:, 1:m] * z              # x = Q_m z\n",
-    "        # Populate results\n",
-    "        Res[m, l] = norm(b - lhs*x)\n",
-    "        X_σ[:, l] = x\n",
-    "    end\n",
-    "end\n",
-    "norm(X_exact - X_σ)"
+    "    x_exact[:, l] = lhs \\ b\n",
+    "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Naive: Standard Arnoldi in a for-loop\n",
+    "#   [A](nxn) x = b\n",
+    "#   [Q](n x m+1) = [q1 q2 ... q(m+1)], q1 = normalized b\n",
+    "#   [H](m+1 x m): upper Hessenberg\n",
+    "#   A Q_m = Q H , [Q_m](nxm) = [q1 q2 ... qm]\n",
+    "#   x = Q_m z\n",
+    "#   A Q_m z = b = Q H z\n",
+    "#   Q' b = Q' Q H z => H z = Q' b = s => z = H \\ s => x = Q_m z\n",
+    "x_naive = zeros(n, L) \n",
+    "for l=1:L\n",
+    "    lhs = A - D[l, l]*I\n",
+    "    b = B[:, l]\n",
+    "    Q, H = arnoldi(lhs, b, M)\n",
+    "    for m in 1:M # Changed the following to be consistent with bArnoldi and gives smaller norms\n",
+    "        s = vcat(norm(b), zeros(m-1, 1)) #   size m+1 -> m\n",
+    "        z = H[1:m, 1:m] \\ s              #   H[1:m+1, 1:m] -> H[1:m, 1:m]\n",
+    "        x = Q[:, 1:m] * z\n",
+    "        x_naive[:, l] = x\n",
+    "    end\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0088272673390422e-8"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "norm(x_naive - x_exact)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": []
