bArnoldi-gmres: it seems to be working for a linear system with multiple RHSs

--- a/implementation/bArnoldi-gmres.ipynb
+++ b/implementation/bArnoldi-gmres.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -38,51 +38,40 @@
    ],
    "source": [
     "n = 100\n",
-    "M = 40\n",
+    "M = 35\n",
     "L = 2\n",
-    "# We need this condition for now\n",
-    "M * L <= n"
+    "M * L <= n # we need this condition for now"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#^^^^^^^^^^^^^^^^^^^^^^^#\n",
-    "#  A*X_σ - X_σ * D = B  #\n",
-    "#_______________________#\n",
-    "# LHS\n",
-    "#   A\n",
+    "#  A X = B (multiple rhs)\n",
     "λ = [i+10 for i in 1:n]\n",
     "a = randn(n, n)\n",
     "A = UpperTriangular(a) - diagm(diag(a)) + diagm(λ)\n",
-    "#   Shift\n",
-    "σ = rand(1:9, L)\n",
-    "D = diagm(σ) \n",
-    "Γ = .7\n",
-    "# RHS\n",
     "B = randn(n, L);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
     "x_exact = zeros(n, L)\n",
     "for l=1:L\n",
-    "    lhs = A # - D[l, l]*I\n",
     "    b = B[:, l]\n",
-    "    x_exact[:, l] = lhs \\ b\n",
+    "    x_exact[:, l] = A \\ b\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,28 +80,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# GMRES\n",
+    "# block GMRES\n",
     "x = zeros(n, L) \n",
     "for m in 1:M\n",
-    "    S = vcat(norm.(eachcol(S0))', zeros((m+1)*L-1, L))\n",
+    "    S = vcat(Matrix(I, L, L), zeros(m*L, L))\n",
     "    z = H[1:L*(m+1), 1:L*m] \\ S  # z = Hm \\ s (minimization problem)\n",
-    "    x = W[:, 1:L*m] * z          # x = Wm z   (solution)\n",
+    "    y = W[:, 1:L*m] * z          # y = Wm z   \n",
+    "    x = y * S0                   # x = y S0\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7524684816260878"
+       "3.721996336928181e-13"
       ]
      },
      "metadata": {},
@@ -120,7 +110,6 @@
     }
    ],
    "source": [
-    "# We are seeking for a norm of order < 1E-5\n",
     "norm(x - x_exact)"
    ]
   }
