copy/pasted bArnoldi to start on shifting

--- a/implementation/bArnoldi-gmres-shifted.ipynb
+++ b/implementation/bArnoldi-gmres-shifted.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -18,12 +18,12 @@
    "source": [
     "using LinearAlgebra\n",
     "using SparseArrays\n",
-    "include(\"bArnoldi.jl\")"
+    "include(\"bArnoldi-shifted.jl\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,13 +67,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "x_exact = zeros(n, L)\n",
     "for l=1:L\n",
-    "    lhs = A # - D[l, l]*I\n",
+    "    lhs = A - D[l, l]*I\n",
     "    b = B[:, l]\n",
     "    x_exact[:, l] = lhs \\ b\n",
     "end"
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,13 +106,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3.1290740301967335e-13"
+       "6.312818022034484e-13"
       ]
      },
      "metadata": {},
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": []
