WIP: this is not correct. Need to look into the literature.

--- a/implementation/bArnoldi-gmres-shifted.ipynb
+++ b/implementation/bArnoldi-gmres-shifted.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,13 +67,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "x_exact = zeros(n, L)\n",
     "for l=1:L\n",
-    "    lhs = A - D[l, l]*I\n",
+    "    lhs = A + D[l, l]*I\n",
     "    b = B[:, l]\n",
     "    x_exact[:, l] = lhs \\ b\n",
     "end"
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,29 +90,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "# GMRES\n",
     "x = zeros(n, L) \n",
-    "for m in 1:M\n",
-    "    S = vcat(Matrix(I, L, L), zeros(m*L, L))\n",
-    "    z = H[1:L*(m+1), 1:L*m] \\ S  # z = Hm \\ s (minimization problem)\n",
-    "    y = W[:, 1:L*m] * z          # y = Wm z   \n",
-    "    x = y * S0                   # x = y S0\n",
+    "for l=1:L\n",
+    "    for m in 1:M\n",
+    "        S = vcat(Matrix(I, L, L), zeros(m*L, L))\n",
+    "        H_bar = H[1:L*(m+1), 1:L*m] + D[l, l] * vcat(Matrix(I, m*L, m*L), zeros(L, m*L))\n",
+    "        z = H_bar \\ S       # z = Hm \\ s (minimization problem)\n",
+    "        y = W[:, 1:L*m] * z # y = Wm z   \n",
+    "        x = y * S0          # x = y S0\n",
+    "    end\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6.312818022034484e-13"
+       "0.01829343801807491"
       ]
      },
      "metadata": {},
@@ -125,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": []
